--- a/Backend/authentication-service/src/main/resources/application.properties
+++ b/Backend/authentication-service/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=authentication-service
 
-#spring.config.import=optional:configserver:http://config-server:8088
-#
 server.port=9099
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.datasource.url=jdbc:postgresql://localhost:5432/authentication-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/auth-service
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #
