--- a/Backend/user-service/src/main/resources/application.properties
+++ b/Backend/user-service/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=user-service
+
+server.port=9098
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.datasource.url=jdbc:postgresql://localhost:5432/users-service
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
