--- a/Backend/api-gateway/src/main/resources/application.properties
+++ b/Backend/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=api-gateway
 
-#spring.config.import=optional:configserver:http://config-server:8088
-
 server.port=9000
 #
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
@@ -10,6 +8,42 @@ management.tracing.sampling.probability=1.0
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
+#auth
+spring.cloud.gateway.routes[0].id=authentication-service
+spring.cloud.gateway.routes[0].uri=lb://authentication-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
 
+#buses
+spring.cloud.gateway.routes[1].id=bus-service
+spring.cloud.gateway.routes[1].uri=lb://bus-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/buses/**
 
+#car-pool
+spring.cloud.gateway.routes[2].id=carpool-service
+spring.cloud.gateway.routes[2].uri=lb://carpool-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/carpools/**
 
+#feedback
+spring.cloud.gateway.routes[3].id=feedback
+spring.cloud.gateway.routes[3].uri=lb://feedback
+spring.cloud.gateway.routes[3].predicates[0]=Path=/feedback/**
+
+#routes
+spring.cloud.gateway.routes[4].id=route-service
+spring.cloud.gateway.routes[4].uri=lb://route-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/routes/**
+
+#stops
+spring.cloud.gateway.routes[5].id=stop-service
+spring.cloud.gateway.routes[5].uri=lb://route-service
+spring.cloud.gateway.routes[5].predicates[0]=Path=/stops/**
+
+#users
+spring.cloud.gateway.routes[6].id=user-service
+spring.cloud.gateway.routes[6].uri=lb://user-service
+spring.cloud.gateway.routes[6].predicates[0]=Path=/users/**
+
+#tickets
+spring.cloud.gateway.routes[7].id=tickets-service
+spring.cloud.gateway.routes[7].uri=lb://user-service
+spring.cloud.gateway.routes[7].predicates[0]=Path=/tickets/**
