--- a/Backend/bus-service/src/main/resources/application.properties
+++ b/Backend/bus-service/src/main/resources/application.properties
@@ -10,5 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-#management.endpoints.web.exposure.include=*
-#management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=location-group
+spring.kafka.consumer.auto-offset-reset=latest
