--- a/Backend/bus-service/src/main/resources/application.properties
+++ b/Backend/bus-service/src/main/resources/application.properties
@@ -17,3 +17,8 @@ management.endpoint.health.show-details=always
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=location-group
 spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.producer.bootstrap-servers=localhost:9092
+
+spring.kafka.product.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.product.value-serializer=org.apache.kafka.common.serialization.StringSerializer
