--- a/Backend/api-gateway/src/main/resources/application.properties
+++ b/Backend/api-gateway/src/main/resources/application.properties
@@ -47,3 +47,7 @@ spring.cloud.gateway.routes[6].predicates[0]=Path=/users/**
 spring.cloud.gateway.routes[7].id=tickets-service
 spring.cloud.gateway.routes[7].uri=lb://user-service
 spring.cloud.gateway.routes[7].predicates[0]=Path=/tickets/**
+
+spring.cloud.gateway.routes[8].id=payment-service
+spring.cloud.gateway.routes[8].uri=lb://payment-service
+spring.cloud.gateway.routes[8].predicates[0]=Path=/payment/**
