--- a/Backend/bus-service/src/main/resources/application.properties
+++ b/Backend/bus-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9095
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.datasource.url=jdbc:postgresql://localhost:5432/bus-service
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 #
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
