--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "chart.js": "^4.4.6",
     "express": "^4.18.2",
+    "lucide-angular": "^0.454.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
