--- a/Backend/api-gateway/src/main/resources/application.properties
+++ b/Backend/api-gateway/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/carpools/**
 
 #feedback
 spring.cloud.gateway.routes[3].id=feedback
-spring.cloud.gateway.routes[3].uri=lb://feedback
+spring.cloud.gateway.routes[3].uri=lb://feedback-service
 spring.cloud.gateway.routes[3].predicates[0]=Path=/feedback/**
 
 #routes
@@ -51,3 +51,7 @@ spring.cloud.gateway.routes[7].predicates[0]=Path=/tickets/**
 spring.cloud.gateway.routes[8].id=payment-service
 spring.cloud.gateway.routes[8].uri=lb://payment-service
 spring.cloud.gateway.routes[8].predicates[0]=Path=/payment/**
+
+spring.cloud.gateway.routes[9].id=schedules
+spring.cloud.gateway.routes[9].uri=lb://bus-service
+spring.cloud.gateway.routes[9].predicates[0]=Path=/busSchedules/**
