--- a/FrontEnd/vercel.json
+++ b/FrontEnd/vercel.json
@@ -1,15 +1,8 @@
 {
-    "builds": [
-      {
-        "src": "dist/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/dist/front-end/$1"
-      }
-    ]
-  }
-  
+     "rewrites": [
+       {
+         "source": "/(.*)",
+         "destination": "/index.html"
+       }
+     ]
+   }
