--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,14 +16,17 @@
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/google-maps": "^18.2.12",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "chart.js": "^4.4.6",
     "express": "^4.18.2",
+    "leaflet": "^1.9.4",
     "lucide-angular": "^0.454.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -36,6 +39,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
