--- a/Backend/notification-service/src/main/resources/application.properties
+++ b/Backend/notification-service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=notification-service
+
+
+server.port=9092
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.datasource.url=jdbc:postgresql://localhost:5432/notification-service
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
