--- a/Backend/api-gateway/src/main/resources/application.properties
+++ b/Backend/api-gateway/src/main/resources/application.properties
@@ -55,3 +55,7 @@ spring.cloud.gateway.routes[8].predicates[0]=Path=/payment/**
 spring.cloud.gateway.routes[9].id=schedules
 spring.cloud.gateway.routes[9].uri=lb://bus-service
 spring.cloud.gateway.routes[9].predicates[0]=Path=/busSchedules/**
+
+spring.cloud.gateway.routes[10].id=notifications
+spring.cloud.gateway.routes[10].uri=lb://notification-service
+spring.cloud.gateway.routes[10].predicates[0]=Path=/notifications/**
