Real Time Location Tracking implemented

--- a/Backend/api-gateway/src/main/resources/application.properties
+++ b/Backend/api-gateway/src/main/resources/application.properties
@@ -59,3 +59,7 @@ spring.cloud.gateway.routes[9].predicates[0]=Path=/busSchedules/**
 spring.cloud.gateway.routes[10].id=notifications
 spring.cloud.gateway.routes[10].uri=lb://notification-service
 spring.cloud.gateway.routes[10].predicates[0]=Path=/notifications/**
+
+spring.cloud.gateway.routes[11].id=live-tracking
+spring.cloud.gateway.routes[11].uri=lb://bus-service
+spring.cloud.gateway.routes[11].predicates[0]=Path=/realtime/**
