--- a/Backend/bus-service/Dockerfile
+++ b/Backend/bus-service/Dockerfile
@@ -7,6 +7,6 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 
 
-COPY --from=build ./target/bus-service.jar bus-service.jar
+COPY --from=build ./target/bus-service*.jar bus-service.jar
 
 CMD ["java","-jar","bus-service.jar"]
