--- a/Backend/carpool-service/Dockerfile
+++ b/Backend/carpool-service/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 
 
-COPY --from=build ./target/carpool-service.jar carpool-service.jar
+COPY --from=build ./target/carpool-service*.jar carpool-service.jar
 
 CMD ["java","-jar","carpool-service.jar"]
