--- a/Backend/feedback-service/Dockerfile
+++ b/Backend/feedback-service/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 
 
-COPY --from=build ./target/feedback-service.jar feedback-service.jar
+COPY --from=build ./target/feedback-service*.jar feedback-service.jar
 
 CMD ["java","-jar","feedback-service.jar"]
