--- a/Backend/notification-service/Dockerfile
+++ b/Backend/notification-service/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 
 
-COPY --from=build ./target/notification-service.jar notification-service.jar
+COPY --from=build ./target/notification-service*.jar notification-service.jar
 
 CMD ["java","-jar","notification-service.jar"]
