--- a/Backend/route-service/Dockerfile
+++ b/Backend/route-service/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 
 
-COPY --from=build ./target/route-service.jar route-service.jar
+COPY --from=build ./target/route-service*.jar route-service.jar
 
 CMD ["java","-jar","route-service.jar"]
