--- a/Backend/user-service/Dockerfile
+++ b/Backend/user-service/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 
 
-COPY --from=build ./target/user-service.jar user-service.jar
+COPY --from=build ./target/user-service*.jar user-service.jar
 
 CMD ["java","-jar","user-service.jar"]
