--- a/Backend/notification-service/src/main/resources/application.properties
+++ b/Backend/notification-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=notification-service
 
 server.port=9092
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification-service
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
