--- a/Backend/api-gateway/src/main/resources/application.properties
+++ b/Backend/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api-gateway
 
 server.port=9000
 #
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka/
 management.tracing.sampling.probability=1.0
 
 management.endpoints.web.exposure.include=*
