--- a/Backend/carpool-service/src/main/resources/application.properties
+++ b/Backend/carpool-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=carpool-service
 
 server.port=9096
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
