--- a/Backend/payment-service/src/main/resources/application.properties
+++ b/Backend/payment-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=payment-service
 server.port=9696
 
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
