--- a/Backend/payment-service/bin/src/main/resources/application.properties
+++ b/Backend/payment-service/bin/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=payment-service
 server.port=9696
 
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/payment-service
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
