--- a/Backend/payment-service/src/main/resources/application-prod.properties
+++ b/Backend/payment-service/src/main/resources/application-prod.properties
@@ -3,9 +3,9 @@ server.port=9696
 
 eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka
 
-spring.datasource.url=jdbc:postgresql://postgres_db:5432/payment-service
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
