--- a/Backend/authentication-service/src/main/resources/application-prod.properties
+++ b/Backend/authentication-service/src/main/resources/application-prod.properties
@@ -4,9 +4,9 @@ spring.application.name=authentication-service
 #
 server.port=9099
 eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka
-spring.datasource.url=jdbc:postgresql://localhost:5432/authentication-service
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
