--- a/Backend/api-gateway/api-gateway-pipeline.yaml
+++ b/Backend/api-gateway/api-gateway-pipeline.yaml
@@ -13,25 +13,29 @@ stages:
   displayName: Build and Push Stage
   jobs:
   - job: BuildAndPush
-    displayName: Build, Test, Dockerize, and Push
+    displayName: Install Java & Maven → Build → Dockerize → Push
     pool:
       name: Default
 
     steps:
     - checkout: self
 
-    - task: Maven@4
-      displayName: 'Maven Build and Test'
-      inputs:
-        mavenPomFile: '$(workingDirectory)/pom.xml'
-        goals: 'clean package'
-        options: '-DskipTests=false'
-        publishJUnitResults: true
-        testResultsFiles: '**/surefire-reports/TEST-*.xml'
-        codeCoverageToolOption: 'JaCoCo'
-        javaHomeOption: 'Path'
-        jdkDirectory: '/usr/lib/jvm/java-11-openjdk-amd64'
-        mavenVersionOption: 'Default'
+    - script: |
+        echo "Installing Java 11..."
+        sudo apt-get update -y
+        sudo apt-get install -y openjdk-11-jre-headless
+        java -version
+
+        echo "Installing Maven..."
+        sudo apt-get install -y maven
+        mvn -version
+      displayName: 'Install Java 11 and Maven'
+
+    - script: |
+        echo "Running Maven Build..."
+        cd $(workingDirectory)
+        mvn clean package
+      displayName: 'Build and Test with Maven'
 
     - task: Docker@2
       displayName: 'Build and Push Docker Image to ACR'
