--- a/Backend/api-gateway/api-gateway-pipeline.yaml
+++ b/Backend/api-gateway/api-gateway-pipeline.yaml
@@ -10,7 +10,7 @@ variables:
 
 stages:
 - stage: Build
-  displayName: Build and Push Stage
+  displayName: CI build And Test Integration
   jobs:
   - job: BuildAndPush
     displayName: Install Java & Maven → Build → Dockerize → Push
@@ -31,13 +31,32 @@ stages:
         mvn -version
       displayName: 'Install Java 17 and Maven'
 
-
     - script: |
         echo "Running Maven Build..."
         cd $(workingDirectory)
         mvn clean package
-      displayName: 'Build and Test with Maven'
+      displayName: 'Installing Maven'
+    
 
+    
+    - task: PublishBuildArtifacts@1
+      displayName: Publishing the artifact
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'api-gateway'
+        publishLocation: 'Container'
+
+
+- stage: ArtifactBuild
+  displayName: Build and Push Stage
+  jobs:
+  - job: BuildAndPush
+    displayName: Building and Push Stage to Acr
+    pool:
+      name: Default
+      
+    steps:
+    - checkout: self
     - task: Docker@2
       displayName: 'Build and Push Docker Image to ACR'
       inputs:
