--- a/Backend/api-gateway/api-gateway-pipeline.yaml
+++ b/Backend/api-gateway/api-gateway-pipeline.yaml
@@ -41,6 +41,8 @@ stages:
         extraProperties: |
           sonar.java.binaries=target/classes
           sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+          sonar.sources=src/main/java
+          sonar.tests=src/test/java
 
     - script: |
         cd $(workingDirectory)
