--- a/Backend/feedback-service/feedback-service-pipeline.yaml
+++ b/Backend/feedback-service/feedback-service-pipeline.yaml
@@ -1,6 +1,4 @@
-trigger:
-  - main
-
+trigger: none
 variables:
   dockerRegistryServiceConnection: 'b0e254bb-b547-4604-a227-4bf606715cf8'
   sonarQubeServiceConnection: 'sonar'  # Change this to your actual service connection name
