--- a/Backend/authentication-service/Dockerfile
+++ b/Backend/authentication-service/Dockerfile
@@ -1,4 +1,5 @@
 FROM maven AS build 
+WORKDIR /app
 
 COPY . .
 
@@ -9,6 +10,6 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-oracle
 
 
-COPY --from=build ./target/authentication-service.jar authentication-service.jar
+COPY --from=build /app/target/authentication-service.jar authentication-service.jar
 
 CMD ["java","-jar","authentication-service.jar"]
