--- a/Backend/service-registry/service-registery-pipeline.yaml
+++ b/Backend/service-registry/service-registery-pipeline.yaml
@@ -2,11 +2,11 @@ trigger: none
 variables:
   dockerRegistryServiceConnection: 'b0e254bb-b547-4604-a227-4bf606715cf8'
   sonarQubeServiceConnection: 'sonar'  # Change this to your actual service connection name
-  imageRepository: 'service-registery'
+  imageRepository: 'service-registry'
   containerRegistry: 'mysharedacr1234.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Backend/service-registery/Dockerfile'
+  dockerfilePath: '$(Build.SourcesDirectory)/Backend/service-registry/Dockerfile'
   tag: '1.0.0'
-  workingDirectory: '$(Build.SourcesDirectory)/Backend/service-registery'
+  workingDirectory: '$(Build.SourcesDirectory)/Backend/service-registry'
 
 stages:
 - stage: Build
