--- a/Backend/service-registry/service-registery-pipeline.yaml
+++ b/Backend/service-registry/service-registery-pipeline.yaml
@@ -68,8 +68,8 @@ stages:
     - task: PublishPipelineArtifact@1
       displayName: 'Publish JAR Artifact'
       inputs:
-        targetPath: '$(workingDirectory)/target/service-registery.jar'
-        artifact: 'service-registery'
+        targetPath: '$(workingDirectory)/target/service-registry.jar'
+        artifact: 'service-registry'
         publishLocation: 'pipeline'
 
 - stage: ArtifactBuild
@@ -83,7 +83,7 @@ stages:
 
     steps:
     - download: current
-      artifact: service-registery
+      artifact: service-registry
 
     - task: Docker@2
       displayName: 'Build and Push Docker Image to ACR'
