--- a/Backend/route-service/route-service-pipeline.yaml
+++ b/Backend/route-service/route-service-pipeline.yaml
@@ -69,7 +69,7 @@ stages:
     - task: PublishPipelineArtifact@1
       displayName: 'Publish JAR Artifact'
       inputs:
-        targetPath: '$(workingDirectory)/target/route-service*.jar'
+        targetPath: '$(workingDirectory)/target/'
         artifact: 'route-service'
         publishLocation: 'pipeline'
 
