--- a/Backend/bus-service/bus-service-pipeline.yaml
+++ b/Backend/bus-service/bus-service-pipeline.yaml
@@ -7,7 +7,7 @@ variables:
   containerRegistry: 'mysharedacr1234.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Backend/bus-service-pipeline/Dockerfile'
   tag: '1.0.0'
-  workingDirectory: '$(Build.SourcesDirectory)/Backend/bus-service-pipeline'
+  workingDirectory: '$(Build.SourcesDirectory)/Backend/bus-service'
 
 stages:
 - stage: Build
