--- a/Backend/bus-service/bus-service-pipeline.yaml
+++ b/Backend/bus-service/bus-service-pipeline.yaml
@@ -39,7 +39,7 @@ stages:
         cliProjectKey: 'devuser09_CapStone-Project-Azure'
         cliProjectName: 'CapStone-Project-Azure'
         extraProperties: |
-          sonar.projectBaseDir=$(Build.SourcesDirectory)/Backend/bus-service-pipeline
+          sonar.projectBaseDir=$(Build.SourcesDirectory)/Backend/bus-service
           sonar.java.binaries=target/classes
           sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
           sonar.sources=src/main/java
