--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,8 +43,8 @@ stages:
             inputs:
               action: deploy
               manifests: |
-                manifests/deployment.yml
-                manifests/service.yml
+                $(Build.SourcesDirectory)/manifests/deployment.yml
+                $(Build.SourcesDirectory)/manifests/service.yml
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
