--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,9 +42,9 @@ stages:
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
-              manifests: |
-                Frontend-Manifests/deployment.yml
-                Frontend-Manifests/service.yml
+               manifests: |
+                $(Build.SourcesDirectory)/Frontend-Manifests/deployment.yml
+                $(Build.SourcesDirectory)/Frontend-Manifests/service.yml
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
