--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,11 @@ stages:
               action: createSecret
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+          - script: |
+              echo "Checking working directory..."
+              ls -R $(Build.SourcesDirectory)
+            displayName: 'List repo files'
+
 
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
