--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
 
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'a736290b-0658-4b67-a305-64f2a02bdcb0'
-  imageRepository: 'frontend-image'
+  imageRepository: 'frontendangularimg'
   containerRegistry: 'mysharedacr1234.azurecr.io'
   tag: '1.0.0'
   imagePullSecret: 'mysharedacr12341458b525-auth'
