--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,28 +55,27 @@ stages:
   - deployment: Deploy
     displayName: Deploy
     pool:
-      name: Default
-    environment: 'CapStoneProjectAzure.default'
+      vmImage: $(vmImageName)
+    environment: 'CapStoneProjectAzure-1833.default'
     strategy:
       runOnce:
         deploy:
           steps:
-          - checkout: self
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
             inputs:
               action: createSecret
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
               manifests: |
-                $(Build.SourcesDirectory)/Frontend-Manifests/deployment.yml
-                $(Build.SourcesDirectory)/Frontend-Manifests/service.yml
+                $(Pipeline.Workspace)/manifests/deployment.yml
+                $(Pipeline.Workspace)/manifests/service.yml
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
                 $(containerRegistry)/$(imageRepository):$(tag)
-
